--- a/index.html
+++ b/index.html
@@ -2,19 +2,90 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Main</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script>
-
+		$(document).ready(function(){
+			$('#goBtn').click(function(){
+				window.location.href= "select.html?"+$('#name').val()+"&"+$('#pin').val()+"&"+$('#lang').val();
+			});
+		});
 	</script>
 </head>
 <body>
 	<div class="container">
-		<div class="col-lg-3 test">
-			sdfsdf
-		</div>
+		<input type='text' class='mainForm form-control' id='name' placeholder='Name'>
+		<input type='text' class='mainForm form-control' id='pin' placeholder='Pin'>
+		<select id='lang' class='mainForm form-control'>
+				<option value='af'>Afrikaans</option>
+				<option value='sq'>Albanian</option>
+				<option value='ar'>Arabic</option>
+				<option value='az'>Azerbaijani</option>
+				<option value='eu'>Basque</option>
+				<option value='bn'>Bengali</option>
+				<option value='be'>Belarusian</option>
+				<option value='bg'>Bulgarian</option>
+				<option value='ca'>Catalan</option>
+				<option value='zh-CN'>Chinese Simplified</option>
+				<option value='zh-TW'>Chinese Traditional</option>
+				<option value='hr'>Croatian</option>
+				<option value='cs'>Czech</option>
+				<option value='da'>Danish</option>
+				<option value='nl'>Dutch</option>
+				<option value='en'>English</option>
+				<option value='eo'>Esperanto</option>
+				<option value='et'>Estonian</option>
+				<option value='tl'>Filipino</option>
+				<option value='fi'>Finnish</option>
+				<option value='fr'>French</option>
+				<option value='gl'>Galician</option>
+				<option value='ka'>Georgian</option>
+				<option value='de'>German</option>
+				<option value='el'>Greek</option>
+				<option value='gu'>Gujarati</option>
+				<option value='ht'>Haitian Creole</option>
+				<option value='iw'>Hebrew</option>
+				<option value='hi'>Hindi</option>
+				<option value='hu'>Hungarian</option>
+				<option value='is'>Icelandic</option>
+				<option value='id'>Indonesian</option>
+				<option value='ga'>Irish</option>
+				<option value='it'>Italian</option>
+				<option value='ja'>Japanese</option>
+				<option value='kn'>Kannada</option>
+				<option value='ko'>Korean</option>
+				<option value='la'>Latin</option>
+				<option value='lv'>Latvian</option>
+				<option value='lt'>Lithuanian</option>
+				<option value='mk'>Macedonian</option>
+				<option value='ms'>Malay</option>
+				<option value='mt'>Maltese</option>
+				<option value='no'>Norwegian</option>
+				<option value='fa'>Persian</option>
+				<option value='pl'>Polish</option>
+				<option value='pt'>Portuguese</option>
+				<option value='ro'>Romanian</option>
+				<option value='ru'>Russian</option>
+				<option value='sr'>Serbian</option>
+				<option value='sk'>Slovak</option>
+				<option value='sl'>Slovenian</option>
+				<option value='es'>Spanish</option>
+				<option value='sw'>Swahili</option>
+				<option value='sv'>Swedish</option>
+				<option value='ta'>Tamil</option>
+				<option value='te'>Telugu</option>
+				<option value='th'>Thai</option>
+				<option value='tr'>Turkish</option>
+				<option value='uk'>Ukrainian</option>
+				<option value='ur'>Urdu</option>
+				<option value='vi'>Vietnamese</option>
+				<option value='cy'>Welsh</option>
+				<option value='yi'>Yiddish</option>
+			</select>
+		<button id='goBtn' class='mainForm form-control btn btn-primary'>Go!</button>
 	</div>
 </body>
 </html>
