--- a/chat.html
+++ b/chat.html
@@ -13,8 +13,30 @@
 			var settings = args[1].split('&');
 			
 			//setInterval(function(){
-			$('#getBtn').click(function(){
-				$.getJSON("http://ec2-23-22-135-101.compute-1.amazonaws.com/receiveGroupMessage?user="+settings[1]+"&pin="+settings[2]+"&userLang="+settings[3]+"&groupId="+settings[0], function(data) {
+				refreshMessages(settings);
+			//},5000);
+			
+		window.ondevicemotion = function(event) {
+			if (event.accelerationIncludingGravity.x > 8.0) {
+				sendMessage(settings);
+			}
+		}
+
+
+		});
+
+		function sendMessage(settings) {
+			if ( $('#msg').val() != "" )	{
+					$.getJSON("http://ec2-23-22-135-101.compute-1.amazonaws.com/sendGroupMessage?groupId="+settings[0]+"&user="+settings[1]+"&pin="+settings[2]+"&sourceLang="+settings[3]+"&message="+$('#msg').val(), function(data){
+							$('#msg').val("");
+							refreshMessages(settings);
+					});
+				}
+		}
+		
+
+		function refreshMessages(settings) {
+			$.getJSON("http://ec2-23-22-135-101.compute-1.amazonaws.com/receiveGroupMessage?user="+settings[1]+"&pin="+settings[2]+"&userLang="+settings[3]+"&groupId="+settings[0], function(data) {
 					$('#allChats').html("");
 					for (var i in data.results) {
 						if (data.results[i].from == settings[1]) {
@@ -25,16 +47,10 @@
 						}
 
 					}
+					window.scrollTo(0,document.body.scrollHeight);
 				});
-			});
-			//},5000);
-			
-			$('#send').click(function(){
-				$.getJSON("http://ec2-23-22-135-101.compute-1.amazonaws.com/sendGroupMessage?groupId="+settings[0]+"&user="+settings[1]+"&pin="+settings[2]+"&sourceLang="+settings[3]+"&message="+$('#msg').val(), function(data){
-					$('#msg').val("");
-				});
-			});
-		});
+		}
+
 	</script>
 </head>
 <body>
@@ -42,8 +58,8 @@
 		<div id='allChats' class="chatWindow col-lg-4">
 		</div>
 		<input type='text' class='mainForm form-control' id='msg' placeholder='Type your message'>
-		<button id='send' class='btn btn-primary'>Send</button>
-		<button id='getBtn' class='btn btn-warning'>Get</button>
+		<!--button id='send' class='btn btn-primary'>Send</button>
+		<button id='getBtn' class='btn btn-warning'>Get</button-->
 	</div>
 </body>
 </html>
